Fix truncate price size on css

--- a/app/assets/stylesheets/dealhunter.css
+++ b/app/assets/stylesheets/dealhunter.css
@@ -1049,6 +1049,7 @@ color:rgb(23, 46, 117);
 }
 
 .offer-price-box {
+    overflow: hidden;
     display: block;
     float: left;
     background-color: mediumaquamarine; /* red */
